--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/03.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/03.md
@@ -10,8 +10,11 @@ title = "०३"
   
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/03_sumanAH_shuchiH_shuchau.md"  newLevelForH1="3" includeTitle="true"  > </div>
   
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/05_sthAlIpAkeShu_cha_grahaNAsAdanaproxaNAni.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/04_sthAlIpAkeShu_cha_grahaNAsAdanaproxaNAni.md"  newLevelForH1="3" includeTitle="true"  > </div>
   
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/05_avadAna-dharmAH.md"  newLevelForH1="3" includeTitle="true"  > </div>
+
+
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/06_pUrvaM_tu_darshapUrNamAsAbhyAmanvArambhaNIyadev.md"  newLevelForH1="3" includeTitle="true"  > </div>
   
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/07_A_paurNamAsAddarshasyAnatItaH_kAla.md"  newLevelForH1="3" includeTitle="true"  > </div>
@@ -20,8 +23,11 @@ title = "०३"
   
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/09_niyatastveva_kAlo-gnihotre_prAyashchittadarshan.md"  newLevelForH1="3" includeTitle="true"  > </div>
   
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/11_nityAhutyorvrIhiyavataNDulAnAmanyatamaddhaviH_k.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/10_nityAhutyorvrIhiyavataNDulAnAmanyatamaddhaviH_k.md"  newLevelForH1="3" includeTitle="true"  > </div>
   
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/11_abhAve_.anyad.md"  newLevelForH1="3" includeTitle="true"  > </div>
+
+
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/12_taNDulA.N_shchetpraxAlyaika.md"  newLevelForH1="3" includeTitle="true"  > </div>
   
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/13_itareShAmasaMskAraH.md"  newLevelForH1="3" includeTitle="true"  > </div>
@@ -33,7 +39,4 @@ title = "०३"
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/16_prAk_prAgAhuteH_samidhameke.md"  newLevelForH1="3" includeTitle="true"  > </div>
   
 <div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/17_yathoktaM_paryuxaNam.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/03/03_None.md"  newLevelForH1="3" includeTitle="true"  > </div>
   
