--- a/shAnkhAyanam/sUtram/gRhyam/mUlam/3/01/16_16_With.md
+++ b/shAnkhAyanam/sUtram/gRhyam/mUlam/3/01/16_16_With.md
@@ -2,4 +2,6 @@
 title = "१६ 16 With ,"
 
 +++
-16. With (the verses), 'Indra, give us best goods,' and, 'Be friendly, O earth' (Rig-veda II, 21, 6; I, 22, 15) he descends (from the chariot).
+इन्द्र श्रेष्ठानि द्रविणानि धेहि  
+स्योना पृथिवि भवेत्यवरोहति 
+
